// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all options callbacks are called: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "url": "/first",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
]
`;

exports[`all options callbacks are called: 1 - history_index 1`] = `1`;

exports[`all options callbacks are called: 1 - options - beforeEnter 1`] = `2`;

exports[`all options callbacks are called: 1 - options - beforeLeave 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onComplete 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onEnter 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onError 1`] = `1`;

exports[`all options callbacks are called: 1 - options - onLeave 1`] = `2`;

exports[`all options callbacks are called: 1 - options - thunk 1`] = `2`;

exports[`all options callbacks are called: 1 - response 1`] = `undefined`;

exports[`all options callbacks are called: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`all options callbacks are called: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`all options callbacks are called: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/first",
            "search": "",
            "url": "/first",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`all options callbacks are called: 1 - title 1`] = `"SECOND"`;
